// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:button 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="test"
          data-role="form-item"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <i
              class="fa fa-plus cxd-Button-icon fa fa-plus"
            />
            <span>
              Text
            </span>
          </button>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <button
            class="cxd-Button cxd-Button--primary cxd-Button--size-default"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal r-2x"
          data-role="form-item"
        >
          <button
            class="cxd-Button cxd-Button--danger cxd-Button--size-sm"
            type="reset"
          >
            <span>
              Reset
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button 2`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="test"
          data-role="form-item"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <i
              class="fa fa-plus cxd-Button-icon fa fa-plus"
            />
            <span>
              Text
            </span>
          </button>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <button
            class="cxd-Button cxd-Button--primary cxd-Button--size-default"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal r-2x"
          data-role="form-item"
        >
          <button
            class="cxd-Button cxd-Button--danger cxd-Button--size-sm"
            type="reset"
          >
            <span>
              Reset
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
  <div
    class="amis-dialog-widget cxd-Modal cxd-Modal--1th"
    role="dialog"
  >
    <div
      class="cxd-Modal-overlay in"
    />
    <div
      class="cxd-Modal-content in"
    >
      <div
        class="cxd-Modal-header"
      >
        <a
          class="cxd-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="cxd-Modal-title"
        >
          提示
        </div>
      </div>
      <div
        class="cxd-Modal-body"
        role="dialog-body"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            对，你刚点击了！
          </span>
        </span>
      </div>
      <div
        class="cxd-Modal-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
